<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AndroidDashboard!</string>
    <string name="app_name">Emergency Services</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    
    <string name="remove_feed">Remove Feed</string>
    <string name="remove_all_feeds">Remove All Feeds</string>
    
    <string-array name="blood_group">
        <item>Select Blood Group</item>
        <item>O-</item>
        <item>O+</item>
        <item>A-</item>
        <item>A+</item>
        <item>B-</item>
        <item>B+</item>
        <item>AB-</item>
        <item>AB+</item>
    </string-array>

    <string name="menu_settings">Settings</string>
    <string name="str_btn_find">Find</string>

    <string-array name="place_type">
        <item>doctor</item>
        <item>hospital</item>
        <item>atm</item>
        <item>bus_station</item>

    </string-array>
    <string-array name="place_type_name">
       	<item>Doctor</item>
        <item>Hospital</item>
        <item>ATM</item>
        <item>Bus Station</item>


    </string-array>

    <string name="title_activity_hospital_search">HospitalSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="alarm">alarm</string>
    <string name="enter_name_hint">enter name</string>
    <string name="new_alarm">New</string>
    <string name="alarm_arrived">Alarm Arrived</string>
    <string name="delete">Delete</string>
    <string name="alarm_list">Alarm List</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="later">Later</string>
    <string name="no_repeat">No Repeat</string>
    <string name="everyday">Everyday</string>
    <string name="saving_fail">Saving fail</string>
    <string name="pls_enter_name">Please enter a name for alarm</string>
    <string name="pls_enter_ringtone">Please choose a ringtone for alarm</string>
    <string name="invalid_file">The file you chosen is invalid</string>
    <string name="times">Times</string>
    <string name="interval">Interval</string>
    <string name="repeatability">Repeatability</string>
    <string name="ringtone">Ringtone</string>
    <string name="choose_ringtone">Choose Ringtone</string>
    <string name="choose_alarm_times">Choose Alarm Times</string>
    <string name="choose_alarm_interval">Choose Alarm Interval</string>
    <string name="choose_alarm_repeatability">Choose Alarm Repeatability</string>
    <string name="next_alarm">Next Alarm</string>
    <string name="no_alarm">No Valid Alarm</string>

    <string-array name="alarm_times">
        <item>Once</item>
        <item>Twice</item>
        <item>Thrice</item>
    </string-array>
    <string-array name="alarm_interval">
        <item>5 minute</item>
        <item>10 minute</item>
        <item>15 minute</item>
        <item>30 minute</item>
    </string-array>
    <string-array name="alarm_repeatability">
        <item>weekday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="emergency_phone_number">108</string>
    <string name="step_no">Step %s</string>
    <string name="call">Call</string>
    <string name="map">Map</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="step_4">Step 4</string>
    <string name="step_5">Step 5</string>
    <string name="step_6">Step 6</string>
    <string name="step_7">Step 7</string>
    <string name="step_8">Step 8</string>
    <string name="step_9">Step 9</string>
    <string name="step_10">Step 10</string>
    <string name="step_11">Step 11</string>
    <string name="step_12">Step 12</string>
    <string name="step_13">Step 13</string>
    <string name="time_left">"%s remaining"</string>
    <string name="start_timer">Start %s timer</string>
    <string name="countdown_finished">Countdown finished</string>
    <string name="reanimation">Resuscitation</string>
    <string name="reanimation_1">Place your hands a few inches above the bridge. Then do a series of 30 chest compressions.</string>
    <string name="reanimation_2">Now, do the 2 rescue breaths</string>
    <string name="reanimation_3">Now do another series of thirty compressions</string>
    <string name="start_reanimation">Start CPR</string>
    <string name="start">Start</string>
    <string name="about_info">
        \t\t\t\t\t\t<b>Emergency Services</b>\n
        \t\t\t\t\t\t\t\t<b>Version 1.0</b>\n\n
        
		This App is developed by Roman Shaikh, Harpreet Khanuja and Vashinavi Kumar.\n \n
        In requirement for completion of Bachelor of Technology in Computer Science. \n
       \t\t\t\t\t\t\t Copyright 2014
        
    </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>