<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout style="@style/StepLayout" >

            <TextView
                style="@style/StepText"
                android:text="@string/step_1" />

            <TextView
                style="@style/StepContentText"
                android:onClick="readOutLoud"
                android:text="Lay the victim and raise the injured part." />
        </LinearLayout>

        <LinearLayout style="@style/StepLayout" >

            <TextView
                style="@style/StepText"
                android:text="@string/step_2" />

            <TextView
                style="@style/StepContentText"
                android:text="Remove from wounds all easily accessible foreign bodies (pieces of glass), but not wydłubuj anything from the wound. " />
        </LinearLayout>

        <LinearLayout style="@style/StepLayout" >

            <TextView
                style="@style/StepText"
                android:text="@string/step_3" />

            <TextView
                style="@style/StepContentText"
                android:text="Pressure to the wound compress, squeezing her any jagged edges. If you are stuck in the wound there any foreign objects, avoid oppressing them. "/>
        </LinearLayout>

        <LinearLayout style="@style/StepLayout" >

            <TextView
                style="@style/StepText"
                android:text="@string/step_4" />

            <TextView
                style="@style/StepContentText"
                android:text="Keep pressure wound compress tightly wrapping a bandage or other material. " />
        </LinearLayout>

        <LinearLayout style="@style/StepLayout" >

            <TextView
                style="@style/StepText"
                android:text="@string/step_5" />

            <TextView
                style="@style/StepContentText"
                android:text="If you compress soaked with blood, do not remove it. Place the next and place it firmly. "/>
        </LinearLayout>

        <LinearLayout style="@style/StepLayout" >

            <TextView
                style="@style/StepText"
                android:text="@string/step_6" />

            <TextView
                style="@style/StepContentText"
                android:text="Call for medical assistance." />

            <com.emergency.services.firstaid.widget.CallEmergencyButton style="@style/CallEmergencyButton" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>