<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout style="@style/StepLayout" >

            <TextView
                style="@style/StepText"
                android:text="@string/step_1" />

            <TextView
                style="@style/StepContentText"
                android:onClick="readOutLoud"
                android:text="Check if the victim is breathing. If not breathing niezłocznie take the sztuczene mouth to mouth respiration until the victim starts to breathe. "/>

            <Button
                android:id="@+id/reanimationButton"
                style="@style/ReanimationButton" />
        </LinearLayout>

        <LinearLayout style="@style/StepLayout" >

            <TextView
                style="@style/StepText"
                android:text="@string/step_2" />

            <TextView
                style="@style/StepContentText"
                android:text="Place the victim in the recovery position ostalonej." />
        </LinearLayout>

        <LinearLayout style="@style/StepLayout" >

            <TextView
                style="@style/StepText"
                android:text="@string/step_3" />

            <TextView
                style="@style/StepContentText"
                android:text="Shield the victim with a blanket or clothing. "/>
        </LinearLayout>

        <LinearLayout style="@style/StepLayout" >

            <TextView
                style="@style/StepText"
                android:text="@string/step_4" />

            <TextView
                style="@style/StepContentText"
                android:text="Call for medical assistance. " />

            <com.emergency.services.firstaid.widget.CallEmergencyButton style="@style/CallEmergencyButton" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>